force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Policy_1__c.field-meta.xml
<CustomField>
    <fullName>Policy_1__c</fullName>
    <label>Policy 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSLI</fullName>
            </value>
            <value>
                <fullName>ABHI</fullName>
            </value>
            <value>
                <fullName>LGI</fullName>
            </value>
            <value>
                <fullName>RGI</fullName>
            </value>
            <value>
                <fullName>Go Digit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>