force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Policy_number__c.field-meta.xml
<CustomField>
    <fullName>Policy_number__c</fullName>
    <label>Policy number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>