force-app/main/default/objects/ABHFL_Case_Detail__c/fields/PP_Status__c.field-meta.xml
<CustomField>
    <fullName>PP_Status__c</fullName>
    <label>PP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Done</fullName>
            </value>
            <value>
                <fullName>Payment Not Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>