force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Preferred_Branch__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Branch__c</fullName>
    <label>Preferred Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABHFL_250004_MEEUP21_2/507#MEERUT</fullName>
                <label>2/507 # MEERUT</label>
            </value>
            <value>    
                <fullName>ABHFL_282002_NAGR002_AGRA-SANJAYPLACE</fullName>
                <label>AGRA - SANJAY PLACE</label>
            </value>
            <value>
                <fullName>ABHFL_380006_WAHD002_AHMEDABAD</fullName>
                <label>AHMEDABAD</label>
            </value>
            <value>
                <fullName>ABHFL_380009_WAHD003_AHMEDABADSAMUDRAANNEXE</fullName>
                <label>AHMEDABAD SAMUDRA ANNEXE</label>
            </value>
            <value>
                <fullName>ABHFL_638011_EROTN19_AKHILPLAZA#ERODE</fullName>
                <label>AKHIL PLAZA # ERODE</label>
            </value>
            <value>
                <fullName>ABHFL_421503_WBDLRP1_BADLAPUR</fullName>
                <label>BADLAPUR</label>
            </value>
            <value>
                <fullName>ABHFL_560025_SBLR003_BANGALORESTARAVENUES</fullName>
                <label>BANGALORE STAR AVENUES</label>
            </value>
            <value>
                <fullName>ABHFL_390023_WBRD001_Baroda</fullName>
                <label>Baroda</label>
            </value>
            <value>
                <fullName>ABHFL_751006_BROOR03_BROADWAYHEIGHTS#ODISHA</fullName>
                <label>BROADWAY HEIGHTS # ODISHA</label>
            </value>
            <value>
                <fullName>ABHFL_600032_SCHE003_CHENNAI_SIDCOINDUSTRIAL_ESTATE</fullName>
                <label>CHENNAI_SIDCO INDUSTRIAL_ESTATE</label>
            </value>
            <value>
                <fullName>ABHFL_641018_SCOI002_Coimbatore</fullName>
                <label>Coimbatore</label>
            </value>
            <value>
                <fullName>ABHFL_110001_NDEL002_Delhi-(Barakhamba)</fullName>
                <label>Delhi - (Barakhamba)</label>
            </value>
            <value>
                <fullName>ABHFL_122022_NGUR001_DELHIGURGAON_GB</fullName>
                <label>DELHI GURGAON_GB</label>
            </value>
            <value>
                <fullName>ABHFL_122022 _NGUR001_Delhi-1(Gurgaon)</fullName>
                <label>Delhi-1 (Gurgaon)</label>
            </value>
            <value>
                <fullName>ABHFL_440010_GENMH49_GENESISSQUARE#NAGPUR</fullName>
                <label>GENESIS SQUARE # NAGPUR</label>
            </value>
            <value>
                <fullName>ABHFL_450001_GROMP23_GROVERPLAZA#KHANDWA</fullName>
                <label>GROVER PLAZA # KHANDWA</label>
            </value>
            <value>
                <fullName>ABHFL_474011_GWAMP01_GWALIOR</fullName>
                <label>GWALIOR</label>
            </value>
            <value>
                <fullName>ABHFL___GWAMP01_GWALIOR_GB</fullName>
                <label>GWALIOR_GB</label>
            </value>
            <value>
                <fullName>ABHFL_500003 _SHYD002_HYD_Secunderabad</fullName>
                <label>HYD_Secunderabad</label>
            </value>
            <value>
                <fullName>ABHFL_444602_AMRMH45_IRWINSQUARE#AMRAVATI</fullName>
                <label>IRWIN SQUARE # AMRAVATI</label>
            </value>
            <value>
                <fullName>ABHFL_342003_WJOD001_JODHPUR</fullName>
                <label>JODHPUR</label>
            </value>
            <value>
                <fullName>ABHFL___WKAL001_KALYAN</fullName>
                <label>KALYAN</label>
            </value>
            <value>
                <fullName>ABHFL_416001_WKOLHPR_KOLHAPUR</fullName>
                <label>KOLHAPUR</label>
            </value>
            <value>
                <fullName>ABHFL_700016_KolChow_KOLKATAWESTBENGAL</fullName>
                <label>KOLKATA WEST BENGAL</label>
            </value>
            <value>
                <fullName>ABHFL_141001_NLDH002_Ludhiana</fullName>
                <label>Ludhiana</label>
            </value>
            <value>
                <fullName>ABHFL_384002_WMSN001_MEHSANA</fullName>
                <label>MEHSANA</label>
            </value>
            <value>
                <fullName>ABHFL_400063_WGOR001_MUMBAI-7(GOREGAON)</fullName>
                <label>MUMBAI - 7 (GOREGAON)</label>
            </value>
            <value>
                <fullName>ABHFL_147001_NPAT002_NABHAGATE#PATIALA</fullName>
                <label>NABHA GATE # PATIALA</label>
            </value>
            <value>
                <fullName>ABHFL_422005_WNAS001_NASHIK</fullName>
                <label>NASHIK</label>
            </value>
            <value>
                <fullName>ABHFL_530003_NAVAP20_NAVARATNA#VISHAKHAPATTNAM</fullName>
                <label>NAVARATNA # VISHAKHAPATTNAM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>