force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Preferred_Branch_Label__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Branch_Label__c</fullName>
    <formula>CASE(
    Preferred_Branch__c,
&apos;ABHFL_452010_WVJNGR1_INDORE&apos;, &apos;Indore&apos;,
&apos;ABHFL_342003_WJOD001_JODHPUR&apos;, &apos;JODHPUR&apos;,
&apos;ABHFL_411014_KHARD01_PRIDEICON#KHARADI&apos;, &apos;PRIDE ICON # KHARADI&apos;,
&apos;ABHFL_122022_NGUR001_DELHIGURGAON_GB&apos;, &apos;DELHI GURGAON_GB&apos;,
&apos;ABHFL_456010_UJJRIS1_RISHINAGAR#UJJAIN&apos;, &apos;RISHI NAGAR # UJJAIN&apos;,
&apos;ABHFL_560025_SBLR003_BANGALORESTARAVENUES&apos;, &apos;BANGALORE STAR AVENUES&apos;,
&apos;ABHFL_380009_WAHD003_AHMEDABADSAMUDRAANNEXE&apos;, &apos;AHMEDABAD SAMUDRA ANNEXE&apos;,
&apos;ABHFL_384002_WMSN001_MEHSANA&apos;, &apos;MEHSANA&apos;,
&apos;ABHFL_122022 _NGUR001_Delhi-1(Gurgaon)&apos;, &apos;Delhi-1 (Gurgaon)&apos;,
&apos;ABHFL_700016_KolChow_KOLKATAWESTBENGAL&apos;, &apos;KOLKATA WEST BENGAL&apos;,
&apos;ABHFL_147001_NPAT002_NABHAGATE#PATIALA&apos;, &apos;NABHA GATE # PATIALA&apos;,
&apos;ABHFL_282002_NAGR002_AGRA-SANJAYPLACE&apos;, &apos;AGRA - SANJAY PLACE&apos;,
&apos;ABHFL_440010_GENMH49_GENESISSQUARE#NAGPUR&apos;, &apos;GENESIS SQUARE # NAGPUR&apos;,
&apos;ABHFL_395009_WSUR002_SURAT&apos;, &apos;SURAT&apos;,
&apos;ABHFL_444602_AMRMH45_IRWINSQUARE#AMRAVATI&apos;, &apos;IRWIN SQUARE # AMRAVATI&apos;,
&apos;ABHFL_520010_SVIJ001_Vijayawada&apos;, &apos;Vijayawada&apos;,
&apos;ABHFL_401303_WVIRAR1_VIRAR&apos;, &apos;VIRAR&apos;,
&apos;ABHFL___NHRID01_HARIDWAR_PARGANA&apos;, &apos;HARIDWAR_ PARGANA&apos;,
&apos;ABHFL_734001_ESIL002_SILIGURIGANAPATIPLAZA&apos;, &apos;SILIGURI GANAPATI PLAZA&apos;,
&apos;ABHFL_457 001 _NRAT001_RATLAM&apos;, &apos;RATLAM&apos;,
&apos;ABHFL_380006_WAHD002_AHMEDABAD&apos;, &apos;AHMEDABAD&apos;,
&apos;ABHFL_751006_BROOR03_BROADWAYHEIGHTS#ODISHA&apos;, &apos;BROADWAY HEIGHTS # ODISHA&apos;,
&apos;ABHFL_416001_WKOLHPR_KOLHAPUR&apos;, &apos;KOLHAPUR&apos;,
&apos;ABHFL_226010_URBUP20_URBANACBUSINESS#LUCKNOW&apos;, &apos;URBANAC BUSINESS # LUCKNOW&apos;,
&apos;ABHFL___GWAMP01_GWALIOR_GB&apos;, &apos;GWALIOR_GB&apos;,
&apos;ABHFL_132103_GBPNIPT_PANIPAT_GB&apos;, &apos;PANIPAT_GB&apos;,
&apos;ABHFL_422005_WNAS001_NASHIK&apos;, &apos;NASHIK&apos;,
&apos;ABHFL_390023_WBRD001_Baroda&apos;, &apos;Baroda&apos;,
&apos;ABHFL_450001_GROMP23_GROVERPLAZA#KHANDWA&apos;, &apos;GROVER PLAZA # KHANDWA&apos;,
&apos;ABHFL_431005_NISMH48_NISHABAFNA#AURANGABAD&apos;, &apos;NISHA BAFNA # AURANGABAD&apos;,
&apos;ABHFL_492001_ERAI002_RAIPUR-SKYPARK&apos;, &apos;RAIPUR - SKY PARK&apos;,
&apos;ABHFL_248001_NDHR002_Dehradhun&apos;, &apos;Dehradhun&apos;,
&apos;ABHFL_414003_AHMMH44_MAULISANKUL#AHMEDNAGAR&apos;, &apos;MAULISANKUL#AHMEDNAGAR&apos;,
&apos;ABHFL_396195_WVAP001_VAPI&apos;, &apos;VAPI&apos;,
&apos;ABHFL_360005_RajGJ29_RAJKOTHYOGICOMPLEX&apos;, &apos;RAJKOT H YOGI COMPLEX&apos;,
&apos;ABHFL_411004_WPUN002_PUNE&apos;, &apos;PUNE&apos;,
&apos;ABHFL_462011_PREMP22_PREMKAMLA#BHOPAL&apos;, &apos;PREM KAMLA # BHOPAL&apos;,
&apos;ABHFL_834001_NRAN001_RANCHI&apos;, &apos;RANCHI&apos;,
&apos;ABHFL_140603_NZIR001_ZIRAKPUR&apos;, &apos;ZIRAKPUR&apos;,
&apos;ABHFL___Pimpri1_PUNE_PIMPRI_GB&apos;, &apos;PUNE_PIMPRI_GB&apos;,
&apos;ABHFL_421503_WBDLRP1_BADLAPUR&apos;, &apos;BADLAPUR&apos;,
&apos;ABHFL_400614_BELMH46_PUJITPLAZA#BELAPUR&apos;, &apos;PUJIT PLAZA # BELAPUR&apos;,
&apos;ABHFL_141001_NLDH002_Ludhiana&apos;, &apos;Ludhiana&apos;,
&apos;ABHFL_250004_MEEUP21_2/507#MEERUT&apos;, &apos;2/507 # MEERUT&apos;,
&apos;ABHFL_474011_GWAMP01_GWALIOR&apos;, &apos;GWALIOR&apos;,
&apos;ABHFL_401404_WPAL001_PALGHAR&apos;, &apos;PALGHAR&apos;,
&apos;ABHFL_201301_NNOI003_NOIDA&apos;, &apos;NOIDA&apos;,
&apos;ABHFL_641018_SCOI002_Coimbatore&apos;, &apos;Coimbatore&apos;,
&apos;ABHFL___WKAL001_KALYAN&apos;, &apos;KALYAN&apos;,
&apos;ABHFL_400063_WGOR001_MUMBAI-7(GOREGAON)&apos;, &apos;MUMBAI - 7 (GOREGAON)&apos;,
&apos;ABHFL_110001_NDEL002_Delhi-(Barakhamba)&apos;, &apos;Delhi - (Barakhamba)&apos;,
&apos;ABHFL_530003_NAVAP20_NAVARATNA#VISHAKHAPATTNAM&apos;, &apos;NAVARATNA # VISHAKHAPATTNAM&apos;,
&apos;ABHFL_638011_EROTN19_AKHILPLAZA#ERODE&apos;, &apos;AKHIL PLAZA # ERODE&apos;,
&apos;ABHFL_500003 _SHYD002_HYD_Secunderabad&apos;, &apos;HYD_Secunderabad&apos;,
&apos;ABHFL_636016_SSLM001_SALEM&apos;, &apos;SALEM&apos;,
&apos;ABHFL_600032_SCHE003_CHENNAI_SIDCOINDUSTRIAL_ESTATE&apos;, &apos;CHENNAI_SIDCO INDUSTRIAL_ESTATE&apos;
,
    &apos;&apos;
)</formula>
    <label>Preferred Branch Label</label>
    <type>Text</type>
</CustomField>