force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Previous_Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>Previous_Touchpoint__c</fullName>
    <label>Previous Touchpoint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OS Email</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Digital channels</fullName>
            </value>
            <value>
                <fullName>Grievance</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Senior Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>