force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Priority1__c.field-meta.xml
<CustomField>
    <fullName>Priority1__c</fullName>
    <formula>CASE(
    Complaint_Type__c,
    &quot;Branch Walkin&quot;, &quot;P2&quot;,
    &quot;Grievance Redressal&quot;, &quot;P2&quot;,
    &quot;Phone Inbound&quot;, &quot;P2&quot;,
    &quot;CPGRAMS&quot;, &quot;P1&quot;,
    &quot;NCH&quot;, &quot;P1&quot;,
    &quot;NHB&quot;, &quot;P1&quot;,
    &quot;RBI&quot;, &quot;P1&quot;,
    &quot;Senior Management&quot;, &quot;P1&quot;,
    &quot;Social Media&quot;, &quot;P1&quot;,
    &quot;Experian&quot;, &quot;P3&quot;,
    &quot;Equifax&quot;, &quot;P3&quot;,
    &quot;Transunion&quot;, &quot;P3&quot;,
    &quot;Legal Notice&quot;, &quot;P3&quot;,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>