force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Punitive_action__c.field-meta.xml
<CustomField>
    <fullName>Punitive_action__c</fullName>
    <label>Punitive action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>