force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BALANCE PF OR SANCTION FEE</fullName>
            </value>
            <value>
                <fullName>CERSAI CHARGE</fullName>
            </value>
            <value>
                <fullName>FORECLOSURE STATEMENT CHARGES</fullName>
            </value>
            <value>
                <fullName>FORECLOSURE CHARGES</fullName>
            </value>
            <value>
                <fullName>SWAPPING CHARGES</fullName>
            </value>
            <value>
                <fullName>DOCUMENT RETRIEVAL CHARGES</fullName>
            </value>
            <value>
                <fullName>LOGIN FEE</fullName>
            </value>
            <value>
                <fullName>CHEQUE BOUNCING CHARGES</fullName>
            </value>
            <value>
                <fullName>PART PREPAYMENT CHARGES</fullName>
            </value>
            <value>
                <fullName>SWITCH CHARGES FROM FIXED TO FLOATING AND VICE VER</fullName>
            </value>
            <value>
                <fullName>LEGAL EXPENSES</fullName>
            </value>
            <value>
                <fullName>DUE DILIGENCE CHARGES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>