force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Query_From__c.field-meta.xml
<CustomField>
    <fullName>Query_From__c</fullName>
    <label>Query From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>DSA</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Insurance Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>