force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Query_From_InteralFlow__c.field-meta.xml
<CustomField>
    <fullName>Query_From_InteralFlow__c</fullName>
    <label>Query From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>