force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Query_From_Others__c.field-meta.xml
<CustomField>
    <fullName>Query_From_Others__c</fullName>
    <label>Query From - Others</label>
    <type>TextArea</type>
</CustomField>