force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Realization_status__c.field-meta.xml
<CustomField>
    <fullName>Realization_status__c</fullName>
    <label>Realization status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Bounce</fullName>
            </value>
            <value>
                <fullName>Additional Requirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>