force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Reason_for_delay__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_delay__c</fullName>
    <label>Reason for delay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BT Banker Unavailable</fullName>
            </value>
            <value>
                <fullName>You&apos;re Unavailable</fullName>
            </value>
            <value>
                <fullName>Inability to contact you</fullName>
            </value>
            <value>
                <fullName>Delay by our courier partner</fullName>
            </value>
            <value>
                <fullName>Documents are in transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>