force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Reason_for_Foreclosure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Foreclosure__c</fullName>
    <label>Reason for Foreclosure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal – Seller BT</fullName>
            </value>
            <value>
                <fullName>Stressed Account</fullName>
            </value>
            <value>
                <fullName>Loan Cancellation</fullName>
            </value>
            <value>
                <fullName>Top up reject</fullName>
            </value>
            <value>
                <fullName>Sale of Property</fullName>
            </value>
            <value>
                <fullName>Own source</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>TOP UP Raised</fullName>
            </value>
            <value>
                <fullName>Non contactable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>