force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Reason_for_Retrieval__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Retrieval__c</fullName>
    <label>Reason for Retrieval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal/Collection Request</fullName>
            </value>
            <value>
                <fullName>Audit Request</fullName>
            </value>
            <value>
                <fullName>Adhoc Scan Request</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>