force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Reason_for_Retrieval_Others__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Retrieval_Others__c</fullName>
    <label>Reason for Retrieval - Others</label>
    <type>TextArea</type>
</CustomField>