force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Reason_of_EBot_Auto_Closure_Failure__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_EBot_Auto_Closure_Failure__c</fullName>
    <formula>IF(
    TEXT(Is_Repeat__c)=&quot;Yes&quot;,
    &quot;IsRepeat is Yes.&quot;,
    IF(
        Confidence_Score__c &lt; 0.60,
        &quot;Confidence Score is less than 0.6&quot;,
        IF(
            TEXT( Is_Smt__c )=&quot;Yes&quot;,
            &quot;Issmt is Yes.&quot;,
            IF(
                TEXT( Is_Regulator__c )=&quot;Yes&quot;,
                &quot;IsRegulator is Yes.&quot;,
                IF(
                    TEXT(  Is_Registred__c )=&quot;Yes&quot;,
                    &quot;ISREGISTRED is Yes.&quot;,
                    &quot;&quot;
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason of E-Bot Auto Closure Failure</label>
    <type>Text</type>
</CustomField>