force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Reason_of_Refund__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Refund__c</fullName>
    <label>Reason of Refund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>