force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Reason_to_Stop_EMI__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Stop_EMI__c</fullName>
    <label>Reason to Stop EMI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Closure</fullName>
            </value>
            <value>
                <fullName>Advance EMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>