force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Regulator_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Regulator_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regulator Initiated</label>
    <type>Checkbox</type>
</CustomField>