force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Rekyc_Status__c.field-meta.xml
<CustomField>
    <fullName>Rekyc_Status__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>Rekyc Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>