force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Remarks_Gap_People__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Gap_People__c</fullName>
    <label>Remarks - Gap - People</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>