force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Remarks_Gap_Process__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Gap_Process__c</fullName>
    <label>Remarks - Gap - Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>