force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Remarks_Regular_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Regular_Initiated__c</fullName>
    <label>Remarks - Regular Initiated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>