force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Repayment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Mode__c</fullName>
    <label>Repayment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NACH</fullName>
            </value>
            <value>
                <fullName>PDC</fullName>
            </value>
            <value>
                <fullName>ECS</fullName>
            </value>
            <value>
                <fullName>ECSROW</fullName>
            </value>
            <value>
                <fullName>Netbanking</fullName>
            </value>
            <value>
                <fullName>CreditCard</fullName>
            </value>
            <value>
                <fullName>DebitCard</fullName>
            </value>
            <value>
                <fullName>IMPS</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>