force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Repeated__c.field-meta.xml
<CustomField>
    <fullName>Repeated__c</fullName>
    <label>Repeated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>