force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Resolution_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Remarks__c</fullName>
    <label>Resolution Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>