force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Retention_Team_Required__c.field-meta.xml
<CustomField>
    <fullName>Retention_Team_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retention Team Required</label>
    <type>Checkbox</type>
</CustomField>