force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Revised_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Due_Date__c</fullName>
    <label>Revised Due Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>5th</fullName>
            </value>
            <value>
                <fullName>10th</fullName>
            </value>
            <value>
                <fullName>15th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>