force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Revised_EMI__c.field-meta.xml
<CustomField>
    <fullName>Revised_EMI__c</fullName>
    <label>Revised EMI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>