force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Revised_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Revised_Tenure__c</fullName>
    <label>Revised Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>