force-app/main/default/objects/ABHFL_Case_Detail__c/fields/ROI_Switch_Fee__c.field-meta.xml
<CustomField>
    <fullName>ROI_Switch_Fee__c</fullName>
    <label>ROI Switch Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>